<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:columnCount="2"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_column="0"
        android:layout_row="0"/>

    <EditText
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_column="1"
        android:layout_row="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/gender"/>

    <LinearLayout>
    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ge">
        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/male"
            android:layout_height="wrap_content"
            android:text="@string/male" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/female"
            android:text="@string/female" />
    </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/degree"
        android:layout_column="0"
        android:layout_row="2"/>

    <LinearLayout>
        <RadioGroup
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rg">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ug"
                android:onClick="addCourse"
                android:text="@string/ug"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pg"
                android:onClick="addCourse"
                android:text="@string/pg" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/course" />

    <Spinner
        android:id="@+id/course">

    </Spinner>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/address"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/address"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:inputType="textMultiLine" />

    <Button
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:text="@string/singup"
        android:onClick="doSomething"/>

</GridLayout>